--- a/App.axaml
+++ b/App.axaml
@@ -1,8 +1,8 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="AvaloniaApplication.App"
-             xmlns:local="using:AvaloniaApplication"
-             RequestedThemeVariant="Default">
+             x:Class="AvaloniaLiveAudioAnalyzer.App"
+             xmlns:local="using:AvaloniaLiveAudioAnalyzer"
+             RequestedThemeVariant="Light">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
@@ -11,5 +11,18 @@
   
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="/Styles/AppDefaultStyles.axaml"/>
+        <StyleInclude Source="/Styles/LargeLabelControl.axaml"/>
+        <StyleInclude Source="/Styles/AnimatedPopup.axaml" />
     </Application.Styles>
+    
+    <Application.Resources>
+        <SolidColorBrush x:Key="MediumGreyBrush">#e5e5e5</SolidColorBrush>
+        <SolidColorBrush x:Key="LightBlueBrush">#606875</SolidColorBrush>
+        <SolidColorBrush x:Key="MidBlueBrush">#373c44</SolidColorBrush>
+        <SolidColorBrush x:Key="DarkBlueBrush">#1a1c20</SolidColorBrush>
+        <SolidColorBrush x:Key="BrightBlueBrush">#7f98c7</SolidColorBrush>
+        <SolidColorBrush x:Key="BrightBlueHoverBrush">#98acd0</SolidColorBrush>
+        <SolidColorBrush x:Key="FadedRedBrush">#bc7c7a</SolidColorBrush>
+    </Application.Resources>
 </Application>
