--- a/Styles/AnimatedPopup.axaml
+++ b/Styles/AnimatedPopup.axaml
@@ -1,8 +1,21 @@
-﻿<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AvaloniaLiveAudioAnalyzer.Styles.AnimatedPopup">
-    Welcome to Avalonia!
-</UserControl>
+﻿<Styles xmlns="https://github.com/avaloniaui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:controls="using:AvaloniaLiveAudioAnalyzer">
+    <Design.PreviewWith>
+        <controls:AnimatedPopup>
+            <Button Content="My Button" />
+        </controls:AnimatedPopup>
+    </Design.PreviewWith>
+
+    <Style Selector="controls|AnimatedPopup">
+        <!-- Set Defaults -->
+        <Setter Property="ZIndex" Value="10"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"></Setter>
+        <Setter Property="Template">
+            <ControlTemplate>
+                <ContentPresenter Content="{TemplateBinding Content}"></ContentPresenter>
+            </ControlTemplate>
+        </Setter>
+    </Style>
+</Styles>
