--- a/Styles/LargeLabelControl.axaml
+++ b/Styles/LargeLabelControl.axaml
@@ -1,6 +1,6 @@
 ﻿<Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="using:AvaloniaLiveAudioAnalyzer">
+        xmlns:controls="clr-namespace:AvaloniaLiveAudioAnalyzer">
     <Design.PreviewWith>
         <Border Background="{DynamicResource DarkBlueBrush}">
             <StackPanel Margin="50">
@@ -19,8 +19,8 @@
             <ControlTemplate>
                 <Border Padding="15, 7" Background="{TemplateBinding Background}">
                     <StackPanel>
-                        <Label HorizontalAlignment="Center" Padding="0" FontSize="21" Content="{TemplateBinding LargeText}" />
-                        <Label HorizontalAlignment="Center" Padding="0" FontSize="11" Content="{TemplateBinding SmallText}" />
+                        <Label Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" Padding="0" FontSize="21" Content="{TemplateBinding LargeText}" />
+                        <Label Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" Padding="0" FontSize="11" Content="{TemplateBinding SmallText}" />
                     </StackPanel>
                 </Border>
             </ControlTemplate>
@@ -35,8 +35,8 @@
         <Setter Property="Template">
             <ControlTemplate>
                 <StackPanel>
-                    <Label Padding="15,3" CornerRadius="20" Background="{TemplateBinding Background}" HorizontalAlignment="Center" FontSize="21" Content="{TemplateBinding LargeText}" />
-                    <Label HorizontalAlignment="Center" Margin="0,5,0,5" Padding="0" Content="{TemplateBinding SmallText}" />
+                    <Label Foreground="{TemplateBinding Foreground}" Padding="15,3" CornerRadius="20" Background="{TemplateBinding Background}" HorizontalAlignment="Center" FontSize="21" Content="{TemplateBinding LargeText}" />
+                    <Label Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" Margin="0,5,0,5" Padding="0" FontSize="11" Content="{TemplateBinding SmallText}" />
                 </StackPanel>
             </ControlTemplate>
         </Setter>
